# facial-expression-handcrafted

./: .gitignore  README.md
mrodriguez/: Tesis.sh  ejecutar.txt  visualBash.sh
mrodriguez/AnteProyecto Tesis/: main.aux  main.bbl  main.blg
mrodriguez/codigo/: BoWBuilder.hpp  BoWBuilderMain.cpp  CMakeLists.txt  MicroDescriptorBuilder.hpp  MicroDescriptorBuilderMain.cpp  README  RaysExtractor.hpp  RaysExtractorMain.cpp  kFoldCreatorFiles.cpp  svm.cpp  svm.hpp  svmMain.cpp  utility.cpp  utility.hpp  video_list.txt
mrodriguez/data/: video_list.txt
mrodriguez/data/videos_sinteticos/: 1cuadrado_textura_gaussiana.avi
mrodriguez/source/: BoWBuilder.hpp  BoWBuilderMain.cpp  CMakeLists.txt  MicroDescriptorBuilder.hpp  MicroDescriptorBuilderMain.cpp  README  RaysExtractor.hpp  kFoldCreatorFiles.cpp  por_hacer.txt  svmMain.cpp
mrodriguez/source/cpp/: BoWBuilderMain.cpp  CreateDB.cpp  MicroDescriptorBuilderMain.cpp  MicroDescriptorNormalizeMain.cpp  PaintFaceWithClusters.cpp  RaysErrorCalc.cpp  RaysExtractorMain.cpp  SVMTestValues.cpp  TesisMain.cpp  TestFileCreator.cpp  VisualRaysTracker.cpp  firstFrame.cpp  kFoldCreatorFiles.cpp  kFoldCrossValidationMain.cpp  kFoldCrossValidationMain_new.cpp  kFoldCrossValidationMain_old.cpp  svmMain.cpp
mrodriguez/source/header/: BoWBuilder.hpp  MacroDescriptorBuilder.hpp  MicroDescriptorBuilder.hpp  RaysExtractor.hpp  RaysExtractor2.hpp  RaysExtractor_old.hpp  SVM.hpp  Svm.hpp  kFoldCrossValidation.hpp  kFoldCrossValidation_new.hpp  kFoldCrossValidation_old.hpp  lbp.cpp  ldn.cpp  mask.cpp  utility.cpp  utility.hpp
src/: PaintClusters.sh
src/data/: emotions.txt
src/data/videos_sinteticos/: 2cuadrado_textura_gaussiana.avi  cuadrado_moviendose.avi
src/source/: README  por_hacer.txt
src/source/cpp/: BoWBuilderMain.cpp  CreateDB.cpp  EcualizadoImg.cpp  MacroDescriptorBuilderMain.cpp  MicroDescriptorBuilderMain.cpp  MicroDescriptorNormalizeMain.cpp  RaysErrorCalc.cpp  RaysExtractorMain.cpp  SVMTestValues.cpp  TestFileCreator.cpp  VideoTransformLBP.cpp  kFoldCrossValidationMain.cpp  kFoldCrossValidationMain_new.cpp  videoOutImg.cpp
src/source/header/: MacroDescriptorBuilder.hpp  kFoldCrossValidation.hpp  kFoldCrossValidation_new.hpp  ldn.cpp  utility.cpp  utility.hpp
